integrated snmp_proxy

--- a/rootfs/tpls/etc/nginx/nginx.conf
+++ b/rootfs/tpls/etc/nginx/nginx.conf
@@ -65,6 +65,25 @@ http {
     ## Serve already compressed files directly, bypassing on-the-fly compression
     gzip_static on;
 
+    upstream snmp_proxy {
+        server host.docker.internal:8081;
+        server host.docker.internal:8082;
+        server host.docker.internal:8083;
+        server host.docker.internal:8084;
+        server host.docker.internal:8085;
+        server host.docker.internal:8086;
+        server host.docker.internal:8087;
+        server host.docker.internal:8088;
+        server host.docker.internal:8089;
+        server host.docker.internal:8090;
+        server host.docker.internal:8091;
+        server host.docker.internal:8092;
+        server host.docker.internal:8093;
+        server host.docker.internal:8094;
+        server host.docker.internal:8095;
+        server host.docker.internal:8096;
+    }
+
     server {
         listen 8000;
         listen [::]:8000;
@@ -78,6 +97,12 @@ http {
 
         location /api/v0 {
             try_files $uri $uri/ /api_v0.php?$query_string;
+        }
+
+        location /_snmp_proxy {
+            proxy_pass http://snmp_proxy;
+            access_log off;
+            error_log off;
         }
 
         location ~ \.php$ {
