优化RPC请求后主动关闭连接，配置调试主机地址，兼容windows

--- a/rootfs/tpls/etc/nginx/nginx.conf
+++ b/rootfs/tpls/etc/nginx/nginx.conf
@@ -101,6 +101,7 @@ http {
 
         location /_snmp_proxy {
             proxy_pass http://snmp_proxy;
+            proxy_set_header Connection close;
             access_log off;
             error_log off;
         }
