--- a/rootfs/tpls/etc/php81/conf.d/xdebug.ini
+++ b/rootfs/tpls/etc/php81/conf.d/xdebug.ini
@@ -6,13 +6,13 @@ xdebug.remote_autostart = 1
 xdebug.default_enable=1
 xdebug.remote_handler=dbgp
 #xdebug.remote_mode=req
-xdebug.remote_host=docker.for.mac.localhost
+xdebug.remote_host=host.docker.internal
 xdebug.remote_port=9001
 
 
 xdebug.mode=debug
 xdebug.start_with_request=yes
-xdebug.client_host=docker.for.mac.localhost
+xdebug.client_host=host.docker.internal
 xdebug.client_port = 9001
 xdebug.idekey=VSCODE
 
